@@ -2551,6 +2551,12 @@ process_expression(char *buff, char **bp, char const **str,
         } while ((*str)[-1] == ',');
         if ((*str)[-1] != ')')
           (*str)--;
+
+
+	/* Warn about deprecated functions */
+	if (fp->flags & FN_DEPRECATED)
+	  notify_format(Owner(executor), T("Deprecated function %s being used on object #%d."), fp->name, executor);
+
         /* See if this function is enabled */
         /* Can't do this check earlier, because of possible side effects
          * from the functions.  Bah. */
